cluster/gitness/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitness
  labels:
    app: gitness
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitness
  template:
    metadata:
      name: gitness
      labels:
        app: gitness
    spec:
      volumes:
        - name: gitness-volume
          persistentVolumeClaim:
            claimName: gitness-pvc
      containers:
        - name: gitness
          image: harness/gitness:3.0.0-beta.7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: "/data"
              name: gitness-volume
      restartPolicy: Always
