cluster/gitness/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitness-service
spec:
  selector:
    app: gitness
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
